# yolo-ai-rest-api

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/actions/: deploy.yml
.github/workflows/: docker-image.yml
data/: solutions.csv
models/: yolo_model.py
routes/: detect.py  predict.py
services/: model_service.py  solution_service.py  yolo.py  yolo_service.py
