[project]
name = "sahabat-tani-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask",
    "numpy",
    "ultralytics",
    "onnxruntime",
    "fastapi",
    "uvicorn",
    "opencv-python-headless",
    "python-multipart"
]
